add FindBetweenTimestamp / refactor filename
